data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4064.wast
;; 3. **Test Unreachable Code Execution with Invalid Operand Stack**:    - **Description**: Execute a call_indirect instruction where the operand stack does not have sufficient values as required by the function signature.    - **Constraint Checked**: Validate correct handling of operand stack requirements.    - **Relation to Unreachable**: Ensures that lack of required operands does not result in reaching an 'unreachable' instruction erroneously.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 0 funcref)
    (func $invalid-operand-stack
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "type mismatch"
)